alignment fixed in maindashboard

--- a/src/app/main-dashboard/main-dashboard.component.css
+++ b/src/app/main-dashboard/main-dashboard.component.css
@@ -3,6 +3,7 @@
 }
 .sidenav{
     width: 5%;
+    overflow: hidden;
 }
 .menu-item:hover{
    background-color: #ddd !important;
